--- a/views/admin/couponAdd.ejs
+++ b/views/admin/couponAdd.ejs
@@ -100,7 +100,7 @@
         };
 
         if(minAmount === '' || minAmount <= 0){
-            minAmountError.textContent = 'Please select any date'
+            minAmountError.textContent = 'Please Enter Minimum Amount'
             isValid = false
         };
 
