cart problem fixed

--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -39,7 +39,7 @@
                                 </form>
                             </div>
                             <div class="col-lg-6 mt-2 mt-lg-0">
-                                <form action="/admin/salesReport" method="GET">
+                                <form id="filterForm" action="/admin/salesReport" method="GET">
                                     <div class="form-group row">
                                         <label for="startDate" class="col-sm-4 col-form-label">Start Date:</label>
                                         <div class="col-sm-8">
