--- a/views/users/orderdetails.ejs
+++ b/views/users/orderdetails.ejs
@@ -113,7 +113,7 @@
 
 
 <%- include('../layout/mobile.ejs') %>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.15/jspdf.plugin.autotable.min.js"></script>
 
 <script>
@@ -162,7 +162,7 @@
     // Save PDF
     doc.save("invoice.pdf");
   }
-</script>
+</script> -->
 
 <!-- Plugins JS File -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
