--- a/views/admin/couponEdit.ejs
+++ b/views/admin/couponEdit.ejs
@@ -43,7 +43,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <button type="submit" name="submit" class="btn btn-primary">Edit Offer</button>
+                                        <button type="submit" name="submit" class="btn btn-primary">Edit Coupon</button>
                                         <a href="/admin/coupons" class="btn btn-primary ml-2">Back</a>
                                     </div>
                                 </form>
