--- a/views/users/disCoupons.ejs
+++ b/views/users/disCoupons.ejs
@@ -27,6 +27,8 @@
                                 </div>
                             </div>
                         </div>
+                    <% }else{ %> 
+                        <h3>No Coupons</h3>
                     <% } %>
                     <% }) %>
                 </div>
