filetr and sort set all product controller

--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -168,7 +168,7 @@
                                                 <% categories.forEach(category => { %>
                                                 <div class="">
                                                     <!-- <input type="checkbox" class=""> -->
-                                                    <a class="text-muted" href="/filter-category/<%= category._id %>"><%= category.name %></a>
+                                                    <a class="text-muted" href="/all-products/?a=<%= category._id %>"><%= category.name %></a>
                                                 </div>
                                                 <!-- <span class="item-count">3</span> -->
                                                 <% }) %>
