--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -134,7 +134,7 @@
 
                 			<div class="banner-content banner-content-center">
                 				<h3 class="banner-title text-white"><a href="#">ArmChairs</a></h3><!-- End .banner-title -->
-                				<a href="/filter-category/65dda3e448d65827a9b90a04" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                				<a href="/all-products/?a=65dda3e448d65827a9b90a04" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                 			</div><!-- End .banner-content -->
             			</div><!-- End .banner -->
         			</div><!-- End .col-sm-6 col-lg-3 -->
@@ -146,7 +146,7 @@
 
                 			<div class="banner-content banner-content-center">
                 				<h3 class="banner-title text-white"><a href="#">Desk Chairs</a></h3><!-- End .banner-title -->
-                				<a href="/filter-category/65e5a9529c5280a8d0604373" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                				<a href="/all-products/?a=65e5a9529c5280a8d0604373" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                 			</div><!-- End .banner-content -->
             			</div><!-- End .banner -->
         			</div><!-- End .col-sm-6 col-lg-3 -->
@@ -159,7 +159,7 @@
 
                     			<div class="banner-content banner-content-center">
                     				<h3 class="banner-title text-white"><a href="#">Out Door Chairs</a></h3><!-- End .banner-title -->
-                    				<a href="/filter-category/65e5afc79c5280a8d06043a4" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                    				<a href="/all-products/?a=65e5afc79c5280a8d06043a4" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                     			</div><!-- End .banner-content -->
                 			</div><!-- End .banner -->
 
@@ -170,7 +170,7 @@
 
                     			<div class="banner-content banner-content-center">
                     				<h3 class="banner-title text-white"><a href="#">Bean Bags</a></h3><!-- End .banner-title -->
-                    				<a href="/filter-category/65e081b356a68498179cece9" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                    				<a href="/all-products/?a=65e081b356a68498179cece9" class="btn btn-outline-white banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
                     			</div><!-- End .banner-content -->
                 			</div><!-- End .banner -->
                         </div>
